# SimRobot

./: CMakeLists.txt
Src/SimRobot/: Main.cpp  MainWindow.cpp
Src/SimRobotCommon/Parser/: Parser.h
Src/SimRobotCore2/: SimObjectRenderer.h
Src/SimRobotCore2/Graphics/OpenGL/: GraphicsContext.cpp
cmake/: SimRobot.cmake  SimRobotCommon.cmake  SimRobotCore2.cmake  SimRobotCore2D.cmake  SimRobotEditor.cmake
flatpak/: org.BHuman.SimRobot.yml
